--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node scripts/prebuild.js",
     "build": "next build",
+    "postbuild": "node scripts/postbuild.js",
     "export": "next build",
     "start": "next start",
     "lint": "next lint"
